--- a/realty-api.csproj
+++ b/realty-api.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="automapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="mongocsharpdriver" Version="2.7.0" />
   </ItemGroup>
 
   <ItemGroup>
