--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,9 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
+    "IncludeScopes": true,
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Information"
       }
     }
   }
