--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "IncludeScopes": true,
     "Console": {
       "LogLevel": {
-        "Default": "Information"
+        "Default": "Warning"
       }
     }
   }
